# fantasyAverageWeb

./: .gitignore  DEPENDENCY_AUDIT_REPORT.md  INJURY_REPORT_PLAN.md  README.md  analyze_team_slots.py  deep_espn_research.py  espn_api_research.py  external_apis_research.py  find_historical_lineup_data.py  reverse_engineer_espn_ui.py  search_slot_usage_aggregate.py  test_slot_usage_endpoint.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  config.py  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  seed_team_snapshots.py
backend/app/: config.py  main.py
backend/app/api/: analytics.py  league.py  rankings.py  stats.py  teams.py
backend/app/builders/: __init__.py  response_builder.py
backend/app/exceptions/: __init__.py  base.py
backend/app/fantsy_estimator/: README.md  __init__.py  fantasy_estimator.py
backend/app/models/: __init__.py  base.py  estimator.py  fantasy.py  feature_store_models.py  injury_models.py  league.py  matchup_models.py  nba_team_models.py  player.py  projection_models.py  requests.py  simulation.py  stats.py  team.py  trades.py  trend_models.py
backend/app/routes/: analytics.py  estimator.py  feature_store.py  injuries.py  league.py  matchups.py  (+9 more)
backend/migrations/: add_fs_player_games_season_date_index.sql  alter_team_rankings_rk_columns_numeric.sql  create_estimator_tables.sql  create_feature_vector_tables.sql  create_injury_status_table.sql  create_model_pipeline_tables.sql
backend/model_stats_inference/: explore_dataset.py
backend/scripts/: reinit_model_store.py
backend/tests/: conftest.py
(+289 files in other folders)
