[project]
name = "fantasy-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.2.9",
    "pandas>=2.3.0",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.2.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "slowapi>=0.1.9",
    "uvicorn>=0.34.3",
    "pdfplumber>=0.11.0",
]

